--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     
-    <header></header>
+    <header>
+
+        
+    </header>
     <main>
         <div class="members">
             <label for="memberName">Name of a member: </label>
