Se agrega función y botón para limpiar datos y espacios

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </div>
     
             <button  class="btn" onclick="generarGrupos()">Generar Grupos</button>
-            
+            <button  class="btn" onclick="resetearDatos()">Nueva Solicitud</button>
+
             <div id="nombresContainer"></div>
             <div id="resultadoGrupos"></div>
             <div id="totalGrupos"></div>
