--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
     
             <button  class="btn" onclick="generarGrupos()">Generar Grupos</button>
-            <button  class="btn" onclick="resetearDatos()">Nueva Solicitud</button>
+            <button  class="btn reset" onclick="resetearDatos()">Nueva Solicitud</button>
 
             <div id="nombresContainer"></div>
             <div id="resultadoGrupos"></div>
